appId: ${APP_ID}
tags:
  - util
---

# Open user menu popover
- tapOn:
    id: "user-menu-.*"
    delay: 300

# Tap sign-out button

- runFlow:
    when:
      true: ${maestro.platform == 'android'}
    commands: 
        - tapOn:
            point: 50%,22%

- runFlow:
    when:
      true: ${maestro.platform == 'ios'}
    commands: 
        - tapOn:
            point: 35%,25%